# libquspin

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  copywrite.py  meson.build
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  lint.yml  style.yml
docker/: Dockerfile
documentation/: CMakeLists.txt  conf.py
include/quspin/: operator.h  operator.hpp
include/quspin/array/: array.hpp  kernels.hpp  reference.hpp  scalar.hpp
include/quspin/array/detail/: array.hpp  iterator.hpp
include/quspin/array/details/: array.hpp  iterator.hpp  pointer.hpp  reference.hpp  scalar.hpp
include/quspin/array/kernel/: kernels.hpp
include/quspin/basis/: basis.h  generate.h  iterators.h  space.h  space.hpp  symmetry.h  symmetry.hpp  types.h  types.hpp
include/quspin/basis/bitbasis/: benes.h  benes.hpp  bits.h  bits.hpp  dits.h  dits.hpp  info.h  info.hpp  utils.h  utils.hpp
include/quspin/basis/detail/: basis.hpp  generate.hpp  space.hpp  symmetry.hpp  types.hpp
include/quspin/basis/detail/bitbasis/: benes.hpp  bits.hpp  cast.hpp  dits.hpp  info.hpp  utils.hpp
include/quspin/basis/details/: basis.hpp  space.hpp  symmetry.hpp  types.hpp
include/quspin/basis/details/bitbasis/: benes.hpp  bits.hpp  dits.hpp  info.hpp  utils.hpp
include/quspin/detail/: broadcast.hpp  cast.hpp  dispatch.hpp  error.hpp  math.hpp  operators.hpp  optional.hpp  pointer.hpp  select.hpp  threading.hpp  variant_container.hpp
include/quspin/details/: broadcast.hpp  cast.hpp  complex.hpp  dispatch.hpp  error.hpp  math.hpp  operators.hpp  optional.hpp  pointer.hpp  select.hpp  threading.hpp  type_concepts.hpp  variant_container.hpp
include/quspin/dtype/: dtype.hpp
include/quspin/dtype/detail/: dtype.hpp
include/quspin/dtype/details/: dtype.hpp
include/quspin/kernel/: kernels.hpp
include/quspin/qmatrix/: qmatrix.hpp
include/quspin/qmatrix/detail/: iterator.hpp  qmatrix.hpp
include/quspin/qmatrix/details/: iterator.hpp  qmatrix.hpp
include/quspin/qmatrix/kernel/: dot.hpp  sum.hpp
include/quspin/qmatrix/kernel/detail/: dot.hpp  sum.hpp
include/quspin/qmatrix/kernel/details/: dot.hpp  sum.hpp
include/quspin/qoperator/: qoperator.hpp
include/quspin/qoperator/details/: qoperator.hpp
include/quspin/quantum_operator/: quantum_operator.hpp
include/quspin/quantum_operator/details/: quantum_operator.hpp
include/quspin/quantum_operator/kernel/: dot.hpp  sum.hpp
include/quspin/quantum_operator/kernel/details/: sum.hpp
include/quspin/scalar/: reference.hpp  scalar.hpp
include/quspin/scalar/detail/: reference.hpp  scalar.hpp
include/quspin/scalar/details/: reference.hpp  scalar.hpp
include/quspin/utils/: functions.h  functions.hpp
libquspin/include/quspin/array/: array.hpp  scalar.hpp
libquspin/include/quspin/array/details/: array.hpp
libquspin/include/quspin/details/: broadcast.hpp  cast.hpp  dispatch.hpp  math.hpp  operators.hpp
libquspin/include/quspin/dtype/: dtype.hpp
libquspin/include/quspin/dtype/details/: dtype.hpp
libquspin/include/quspin/quantum_operator/: quantum_operator.hpp
libquspin/include/quspin/quantum_operator/kernel/: kernel.hpp
libquspin/include/quspin/quantum_operator/kernel/details/: sum.hpp
libquspin/src/array/: array.cpp
libquspin/src/dtype/: dtype.cpp
libquspin/test/: array.cpp  dtype.cpp
scripts/: run-clang-format.sh  run-clang-tidy.sh  run-find.sh
source/array/: array.cpp  reference.cpp  scalar.cpp
source/array/kernel/: kernels.cpp
source/dtype/: dtype.cpp
source/kernel/: kernels.cpp
source/qoperator/: qoperator.cpp
source/quantum_operator/: quantum_operator.cpp
src/array/: array.cpp  kernels.cpp  reference.cpp  scalar.cpp
src/array/details/: array.cpp  iterator.cpp  pointer.cpp
src/array/kernel/: kernels.cpp
src/details/: pointer.cpp
src/dtype/: dtype.cpp
src/qmatrix/: qmatrix.cpp
src/qmatrix/detail/: iterator.cpp  qmatrix.cpp
src/qmatrix/details/: iterator.cpp  qmatrix.cpp
src/qmatrix/kernel/: dot.cpp  sum.cpp
src/quantum_operator/: quantum_operator.cpp
src/quantum_operator/kernel/: sum.cpp
src/scalar/: reference.cpp  scalar.cpp
test/: CMakeLists.txt  array.cpp  dtype.cpp  scratch.cpp  test.cpp
test/array/: constructor.cpp  iterator.cpp  kernels.cpp  sum.cpp
test/detail/: select.cpp
test/details/: select.cpp  threading.cpp
test/qmatrix/: constructor.cpp  sum.cpp
test/quantum_operator/: constructor.cpp  sum.cpp
test/source/: array.cpp  dtype.cpp
